<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:isScrollContainer="true">

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#3E3E3E"
				android:paddingTop="50sp"
				android:paddingBottom="50sp">

				<TextView
					android:id="@+id/city_name"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/city"
					android:textColor="#FFFFFF"
					android:textSize="30sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#323232"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/today_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/today_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#3E3E3E"
				android:paddingTop="10sp"
				android:paddingBottom="10sp">

				<TextView
					android:id="@+id/textView6"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:paddingLeft="20dp"
					android:text="@string/wind"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="4"
					android:orientation="vertical">

					<TextView
						android:id="@+id/chill_label"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="4"
						android:gravity="center"
						android:paddingTop="5sp"
						android:paddingBottom="5sp"
						android:text="@string/chill"
						android:textColor="#FFFFFF"
						android:textSize="18sp" />

					<TextView
						android:id="@+id/direction_label"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="4"
						android:gravity="center"
						android:paddingTop="5sp"
						android:paddingBottom="5sp"
						android:text="@string/direction"
						android:textColor="#FFFFFF"
						android:textSize="18sp" />

					<TextView
						android:id="@+id/speed_label"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="4"
						android:gravity="center"
						android:paddingTop="5sp"
						android:paddingBottom="5sp"
						android:text="@string/speed"
						android:textColor="#FFFFFF"
						android:textSize="18sp" />
				</LinearLayout>

			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#323232"
				android:paddingTop="10sp"
				android:paddingBottom="10sp">

				<TextView
					android:id="@+id/textView8"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center_vertical"
					android:paddingLeft="20dp"
					android:text="@string/atmosphere"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="4"
					android:orientation="vertical">

					<TextView
						android:id="@+id/humidity_label"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center"
						android:paddingTop="5sp"
						android:paddingBottom="5sp"
						android:text="@string/humidity"
						android:textColor="#FFFFFF"
						android:textSize="18sp" />

					<TextView
						android:id="@+id/visibility_label"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center"
						android:paddingTop="5sp"
						android:paddingBottom="5sp"
						android:text="@string/visibility"
						android:textColor="#FFFFFF"
						android:textSize="18sp" />

					<TextView
						android:id="@+id/pressure_label"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="center"
						android:paddingTop="5sp"
						android:paddingBottom="5sp"
						android:text="@string/pressure"
						android:textColor="#FFFFFF"
						android:textSize="18sp" />
				</LinearLayout>

			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/textView18"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="#2196F3"
					android:gravity="center"
					android:paddingTop="5sp"
					android:paddingBottom="5sp"
					android:text="@string/forecast"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#323232"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/today_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20sp"
					android:text="@string/today"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/today_temp_label2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/today_cond_label2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#3E3E3E"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/tomorrow_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20dp"
					android:text="@string/tommorow"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/tomorrow_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/tomorrow_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#323232"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/day3_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20dp"
					android:text="@string/day3"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day3_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day3_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#3E3E3E"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/day4_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20dp"
					android:text="@string/day4"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day4_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day4_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#323232"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/day5_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20dp"
					android:text="Day5"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day5_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day5_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#3E3E3E"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/day6_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20dp"
					android:text="Day6"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day6_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day6_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="#323232"
				android:paddingTop="40sp"
				android:paddingBottom="40sp">

				<TextView
					android:id="@+id/day7_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="clip_horizontal|center_vertical"
					android:paddingLeft="20dp"
					android:text="Day7"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day7_temp_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="2"
					android:gravity="center"
					android:text="@string/temperature"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/day7_cond_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="8"
					android:gravity="center"
					android:text="@string/condition"
					android:textColor="#FFFFFF"
					android:textSize="18sp" />
			</TableRow>

		</TableLayout>
	</ScrollView>

</FrameLayout>